# lobook

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md  WRITEUP.md
docs/: FINDINGS.md  insights.md
results/: benchmark_book.txt  benchmark_clock.txt  benchmark_replace.txt  runs_cached_100ns.txt  runs_cached_10ns.txt  runs_cached_1us.txt  runs_naive_1us.txt  runs_uncached_100ns.txt  runs_uncached_10ns.txt  runs_uncached_1us.txt
scripts/: bench_clock.cpp  bench_runs.sh  ec2_bench.sh  latency_hist.sh  pacing_sweep.sh  plot_latency.py  setup_isolated.sh
src/: bench_bitsetbook_runner.cpp  bench_clock.cpp  bench_common.h  bench_fastbook_runner.cpp  benchmark.cpp  benchmark_book.cpp  benchmark_clock.cpp  benchmark_replace.cpp  benchmark_sparse.cpp  fast_main.cpp  main.cpp  server.cpp
src/bench_runners/: bitsetbook_runner.cpp  fastbook_runner.cpp
src/engine/: constants.h  cpu_pinning.h  fast_bitset_book.h  fast_book.h  matching_engine.h  naive_queue.h  order_message.h  price_bitset.h  simple_book.h  spsc_queue.h
src/naive/: simple_book.h
tests/: test_cancel.cpp  test_match.cpp  test_price_bitset.cpp  test_replace.cpp
